edited style and content

--- a/index.html
+++ b/index.html
@@ -8,9 +8,14 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <h1>Hello World</h1>
-        <p>This is a paragraph</p>
-    </div>
+    <header>
+        <div class="container">
+            <div class="title">Hello World</div>
+            <p>This is a paragraph. Lorem ipsum, or lipsum as it is sometimes known, is dummy text used in laying out print, graphic or web designs. The passage is attributed to an unknown typesetter in the 15th century who is thought to have scrambled parts of Cicero's De Finibus Bonorum et Malorum for use in a type specimen book.</p>
+            <button><a href="#">Read More</a></button>
+        </div>
+    </header>
+
+    
 </body>
 </html>
